// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hasLabel: false and compact: false 1`] = `
":host {
  --p-internal-tag-dismissible-scaling: 1;
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  padding: calc(28px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 6px) calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  cursor: pointer;
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: var(--p-color-frosted);
  }
}

.icon {
  padding: calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714));
  margin: calc(-1 * calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hasLabel: false and compact: true 1`] = `
":host {
  --p-internal-tag-dismissible-scaling: 0.64285714;
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  padding: calc(28px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 6px) calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  cursor: pointer;
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: var(--p-color-frosted);
  }
}

.icon {
  padding: calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714));
  margin: calc(-1 * calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hasLabel: true and compact: false 1`] = `
":host {
  --p-internal-tag-dismissible-scaling: 1;
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  padding: calc(16.8px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)) calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  cursor: pointer;
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: var(--p-color-frosted);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: var(--p-color-contrast-high);
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714));
  margin: calc(-1 * calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hasLabel: true and compact: false 2`] = `
":host {
  --p-internal-tag-dismissible-scaling: 1;
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  padding: calc(16.8px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)) calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  cursor: pointer;
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: var(--p-color-frosted);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: var(--p-color-contrast-high);
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714));
  margin: calc(-1 * calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hasLabel: true and compact: true 1`] = `
":host {
  --p-internal-tag-dismissible-scaling: 0.64285714;
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  padding: calc(16.8px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)) calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  cursor: pointer;
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: var(--p-color-frosted);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: var(--p-color-contrast-high);
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714));
  margin: calc(-1 * calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for hasLabel: true and compact: true 2`] = `
":host {
  --p-internal-tag-dismissible-scaling: 0.64285714;
  display: inline-block;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  all: unset;
  display: flex;
  position: relative;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  padding: calc(16.8px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)) calc(22.4px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714) + 4px);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  cursor: pointer;
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: var(--p-color-frosted);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: var(--p-color-contrast-high);
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714));
  margin: calc(-1 * calc(11.2px * (var(--p-internal-tag-dismissible-scaling) - 0.64285714)));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-full));
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
